[package]
name = "chemformula"
version = "0.1.0"
edition = "2021"
license = "MIT"
author = "Evgenii Nekhoroshev e.nekhoroshev@uq.edu.au, evgnekhoroshev@gmail.com"
repository = "https://github.com/evnekdev/chemformula"
readme = "README.md"
description = "A very simple parser of chemical formulas for ChemApp datafiles; no parentheses, integer/fractional coefficients."
keywords = ["chemistry", "formula", "parser", "scientific", "composition"]
categories = ["science", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.*"
nalgebra = "0.32"
strum = "0.28"
strum_macros = "0.28"
num_enum = "0.7"
