[package]
name = "chemformula"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Evgenii Nekhoroshev <evgnekhoroshev@gmail.com>"]
repository = "https://github.com/evnekdev/chemformula"
readme = "README.md"
description = "A parser for chemical formulas, supports integer/fractional coefficients, formula charges, nested parentheses."
keywords = ["chemistry", "formula", "parser", "scientific", "composition"]
categories = ["science", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.*"
nalgebra = "0.32"
strum = "0.28"
strum_macros = "0.28"
num_enum = "0.7"
